--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["crates/py_surtr", "crates/surtr", "crates/tests"]
+members = ["crates/py_surtr", "crates/surtr"]
