feat: Adding go module support

--- a/crates/go_surtr/makefile
+++ b/crates/go_surtr/makefile
@@ -1,7 +1,7 @@
 build:
 	@cargo build -p go_surtr
-	@cp ../../target/release/libgo_surtr.a ./target
+	@cp ../../target/release/libgo_surtr.a ./
 
 build-release:
 	@cargo build -p go_surtr --release
-	@cp ../../target/release/libgo_surtr.a ./target
+	@cp ../../target/release/libgo_surtr.a ./
